--- a/src/pages/500/500.pug
+++ b/src/pages/500/500.pug
@@ -9,5 +9,6 @@ block content
     body
         +error-page({ error: '500', description: 'Мы уже фиксим' })
 
-        script(src='./500.js' type='module')
+block scripts
+    script(src='./500.js' type='module')
     
