--- a/src/pages/chats/chats.pug
+++ b/src/pages/chats/chats.pug
@@ -4,7 +4,7 @@ block title
     title Список чатов
 
 block content
-    body
+    main
         .chats
             .chats__info
 
@@ -27,5 +27,5 @@ block content
                                     path(fill='#fff' d='M8 13.2h11v1.6H8z')
                                     path(d='m15 9 4 5-4 5' stroke='#fff' stroke-width='1.6')
 
-
-        script(src='./chats.js' type='module')
+block scripts
+    script(src='./chats.js' type='module')
