--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -4,7 +4,7 @@ block title
     title Index page
 
 block content
-    body(style='display: flex; flex-direction: column; align-items: center; justify-content: center; padding-top: 200px;')
+    main(style='display: flex; flex-direction: column; align-items: center; justify-content: center; padding-top: 200px;')
         ul(style='display: flex; flex-direction: column; row-gap: 20px; font-size: 18px;')
             li 
                 a(href='../auth/auth.pug') Авторизация
