--- a/src/layout/main/main-layout.pug
+++ b/src/layout/main/main-layout.pug
@@ -4,11 +4,8 @@ html(lang='en')
         meta(charset='UTF-8')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
-        script(src='../../utils/normalize.js' type='module')
-        style.
-            body {
-                font-family: Arial, Helvetica, sans-serif;
-            }
+        link(rel='stylesheet' href='../../utils/normalize.scss')
+        link(rel='stylesheet' href='../../utils/fonts.scss')
 
         block title
 
