--- a/src/modules/error-page/error-page.scss
+++ b/src/modules/error-page/error-page.scss
@@ -5,8 +5,6 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
-
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .error-page__number {
@@ -16,7 +14,7 @@
   font-size: 40px;
   line-height: 40px;
   text-align: center;
-  color: #1e1e1e;
+  color: $dark;
 }
 
 .error-page__description {
@@ -25,13 +23,13 @@
   font-size: 20px;
   line-height: 20px;
   text-align: center;
-  color: #1e1e1e;
+  color: $dark;
 }
 
 .error-page__link {
   font-size: 11px;
   line-height: 11px;
   text-align: center;
-  color: #3369f3;
+  color: $blue;
   text-decoration: none;
 }
