--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -3,8 +3,6 @@
   justify-content: flex-start;
   min-height: 100vh;
 
-  font-family: Arial, Helvetica, sans-serif;
-
   &.is-edit {
     .profile__name {
       visibility: hidden;
@@ -54,9 +52,9 @@
   height: 100vh;
   padding: 18px;
 
-  background-color: #fbfbfb;
+  background-color: $gray-4;
   border-width: 0 1px 0 0;
-  border-color: #eaeaea;
+  border-color: $gray-2;
   outline: none;
   box-shadow: none;
   cursor: pointer;
@@ -85,7 +83,7 @@
   margin: 0 auto 20px;
   overflow: hidden;
 
-  background-color: #efefef;
+  background-color: $gray-3;
   background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M36 2H4a2 2 0 0 0-2 2v21.267l12.655-2.953A11.999 11.999 0 0 1 17.38 22h5.238c.918 0 1.832.105 2.726.314L38 25.267V4a2 2 0 0 0-2-2ZM4 0a4 4 0 0 0-4 4v32a4 4 0 0 0 4 4h32a4 4 0 0 0 4-4V4a4 4 0 0 0-4-4H4Zm6.91 14.546a3.636 3.636 0 1 0-.001-7.273 3.636 3.636 0 0 0 0 7.273Z' fill='%23CDCDCD'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: center;
@@ -118,7 +116,7 @@
   font-size: 13px;
   line-height: 14px;
   text-align: center;
-  color: white;
+  color: $white;
 
   cursor: pointer;
   opacity: 0;
@@ -126,7 +124,7 @@
   transition: all 0.1 ease-in;
 
   &:hover {
-    background-color: rgba(black, 0.5);
+    background-color: rgba($black, 0.5);
     opacity: 1;
   }
 }
@@ -138,7 +136,7 @@
   font-size: 16px;
   line-height: 16px;
   text-align: center;
-  color: #1e1e1e;
+  color: $dark;
 }
 
 .profile__btn {
@@ -149,18 +147,18 @@
   font-size: 13px;
   line-height: 13px;
   text-align: left;
-  color: #3369f3;
+  color: $blue;
 
-  background-color: white;
+  background-color: $white;
   border-width: 1px 0 0;
   border-style: solid;
-  border-color: #eaeaea;
+  border-color: $gray-2;
   cursor: pointer;
 
   transition: color 0.1s ease-in;
 
   &:hover {
-    color: rgba(#3369f3, 0.8);
+    color: rgba($blue, 0.8);
   }
 
   &:first-of-type {
@@ -168,10 +166,10 @@
   }
 
   &--red {
-    color: #ff0000;
+    color: $red-1;
 
     &:hover {
-      color: rgba(#ff0000, 0.8);
+      color: rgba($red-1, 0.8);
     }
   }
 }
