--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -53,6 +53,10 @@
   padding: 18px;
 
   background-color: $gray-4;
+  background-image: url("../../../static/svg/icon-back.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 28px 28px;
   border-width: 0 1px 0 0;
   border-color: $gray-2;
   outline: none;
