--- a/src/components/form-input/form-input.pug
+++ b/src/components/form-input/form-input.pug
@@ -1,13 +1,13 @@
-mixin form-input ({ inputType, name, label, error })
-    .form__input-wrap.js-form-input
-        label.form__label.js-form-label
-            span.form__label-text= label
-            input.form__input(type=inputType name=name)
-        if error
-            .form__error= error
+//- mixin form-input ({ inputType, name, label, error })
+//-     .form__input-wrap.js-form-input
+//-         label.form__label.js-form-label
+//-             span.form__label-text= label
+//-             input.form__input(type=inputType name=name)
+//-         if error
+//-             .form-error= error
 
-mixin form-input-wide ({ inputType, name, label })
-    .form__input-wrap.form__input-wrap--wide
-        label.form__label.js-form-label
-            span.form__label-text= label
-            input.form__input(type=inputType name=name disabled)
+//- mixin form-input-wide ({ inputType, name, label })
+//-     .form__input-wrap.form__input-wrap--wide
+//-         label.form__label.js-form-label
+//-             span.form__label-text= label
+//-             input.form__input(type=inputType name=name disabled)
