--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -9,7 +9,7 @@
   text-align: center;
   color: $white;
 
-  background: $blue;
+  background-color: $blue;
   border: 1px solid $blue;
   border-radius: 8px;
   outline: none;
