--- a/src/pages/404/404.pug
+++ b/src/pages/404/404.pug
@@ -1,14 +1,10 @@
 extends ../../layout/main/main-layout.pug
 
-include ../../modules/error-page/error-page.pug
-
 block title
     title 404
 
 block content
-    main
-        +error-page({ error: '404', description: 'Не туда попали' })
+    main.root
 
 block scripts
-    script(src='./404.js' type='module')
-    
+    script(src='./404.ts' type='module')
