--- a/src/pages/500/500.pug
+++ b/src/pages/500/500.pug
@@ -1,14 +1,10 @@
 extends ../../layout/main/main-layout.pug
 
-include ../../modules/error-page/error-page.pug
-
 block title
     title 500
 
 block content
-    body
-        +error-page({ error: '500', description: 'Мы уже фиксим' })
+    main.root
 
 block scripts
-    script(src='./500.js' type='module')
-    
+    script(src='./500.ts' type='module')
