--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -1,15 +1,10 @@
 extends ../../layout/main/main-layout.pug
 
-include ../../modules/form/form.pug
-
 block title
     title Регистрация
 
 block content
-    main
-        .registration-page
-            .registration-page__form-wrap
-                +registration-form()
+    main.root
 
 block scripts
-    script(src='./registration.js' type='module')
+    script(src='./registration.ts' type='module')
