--- a/src/components/form-input/form-input.scss
+++ b/src/components/form-input/form-input.scss
@@ -31,7 +31,7 @@
     color: $dark;
 
     border-width: 0 0 1px 0;
-    border-color: $blue;
+    border-color: $accent;
     border-radius: none;
     outline: none;
   }
@@ -103,7 +103,7 @@
   color: $dark;
 
   border-width: 0 0 1px 0;
-  border-color: $blue;
+  border-color: $accent;
   border-radius: none;
   outline: none;
 }
