--- a/src/pages/chats/modules/chats-item/chats-item.scss
+++ b/src/pages/chats/modules/chats-item/chats-item.scss
@@ -120,8 +120,8 @@
 
   font-size: 11px;
   line-height: 12px;
-  color: $white;
+  color: $lightFont;
 
-  background-color: $blue;
+  background-color: $accent;
   border-radius: 50%;
 }
