--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -1,12 +1,13 @@
-$white:         #fff;
-$black:         #000;
+$background:    #fff;
+$lightFont:     #fff;
 $dark:          #1e1e1e;
 $gray-1:        #999;
 $gray-2:        #eaeaea;
 $gray-3:        #efefef;
 $gray-4:        #fbfbfb;
 $gray-5:        #f8f8f8;
-$blue:          #3369f3;
+$accent:          #3369f3;
 $lightblue:     #e4edfd;
 $red-1:         #f00;
 $red-2:         #ff2f2f;
+$transparent:   rgba(0, 0, 0, 0);
