--- a/src/pages/chats/chats.scss
+++ b/src/pages/chats/chats.scss
@@ -298,7 +298,7 @@
   flex-shrink: 0;
   padding: 0;
 
-  background-color: rgba($black, 0);
+  background-color: $transparent;
   background-repeat: no-repeat;
   border: none;
   box-shadow: none;
