--- a/src/pages/profile/modules/profile-form/profile-form.scss
+++ b/src/pages/profile/modules/profile-form/profile-form.scss
@@ -69,7 +69,7 @@
       text-align: right;
       color: $gray-1;
 
-      background-color: $white;
+      background-color: $background;
       border: none;
       border-radius: none;
       outline: none;
