--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -130,7 +130,7 @@
   font-size: 13px;
   line-height: 14px;
   text-align: center;
-  color: $white;
+  color: $lightFont;
 
   cursor: pointer;
   opacity: 0;
@@ -138,7 +138,7 @@
   transition: all 0.1 ease-in;
 
   &:hover {
-    background-color: rgba($black, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     opacity: 1;
   }
 }
@@ -167,9 +167,9 @@
   font-size: 13px;
   line-height: 13px;
   text-align: left;
-  color: $blue;
+  color: $accent;
 
-  background-color: $white;
+  background-color: $background;
   border-width: 1px 0 0;
   border-style: solid;
   border-color: $gray-2;
@@ -178,7 +178,7 @@
   transition: color 0.1s ease-in;
 
   &:hover {
-    color: rgba($blue, 0.8);
+    color: rgba($accent, 0.8);
   }
 
   &--red {
