--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -8,7 +8,7 @@
   margin: 0;
   padding: 20px;
 
-  background-color: $white;
+  background-color: $background;
 
   .form-input {
     margin-bottom: 16px;
