--- a/src/pages/chats/modules/chats-item/chats-item.scss
+++ b/src/pages/chats/modules/chats-item/chats-item.scss
@@ -29,6 +29,14 @@
   }
 
   &:hover {
+    &:not(.is-active) {
+      .chats__item-name {
+        text-decoration: underline;
+      }
+    }
+  }
+
+  &.is-active {
     &::before {
       background-color: #e4edfd;
     }
