Изменения до heroku

--- a/src/pages/profile/profile-template.pug
+++ b/src/pages/profile/profile-template.pug
@@ -1,4 +1,3 @@
-export const profilePage = `
 .profile__btn-container
 .profile__form-wrap
     .profile__photo
@@ -7,4 +6,4 @@ export const profilePage = `
 
     .profile__form-container
 
-    .profile__btns`;
+    .profile__btns
