--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import './utils/normalize.scss';
 @import './utils/fonts.scss';
+@import './utils/variables.scss';
 
 .index-page {
   display: flex;
