--- a/src/pages/chats/chats-template.pug
+++ b/src/pages/chats/chats-template.pug
@@ -1,7 +1,6 @@
-export const chatsTemplate = `
 .chats__info
     .chats__options
-        a.chats__profile-link(href="/settings") Профиль
+        a.chats__profile-link(href="/settings/") Профиль
         .chats__form-search
             form(method="POST" action="/")
                 .form-input
@@ -15,4 +14,4 @@ export const chatsTemplate = `
                         span Создать чат
                         input(type="text" name="title" autocomplete="off")
     .chats__list
-.chats__body`;
+.chats__body
